[gd_scene load_steps=13 format=3 uid="uid://cx03tmf7cyu8n"]

[ext_resource type="Texture2D" uid="uid://bkev73orr3pf1" path="res://scenes/SpaceInvaders/Drone.png" id="1_0cvru"]
[ext_resource type="Script" uid="uid://cbjdgjbjuyf35" path="res://scenes/shoot bugs/laser.gd" id="1_rl8mx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rl8mx"]
atlas = ExtResource("1_0cvru")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqa5n"]
atlas = ExtResource("1_0cvru")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5itnu"]
atlas = ExtResource("1_0cvru")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ki2s"]
atlas = ExtResource("1_0cvru")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_srfv2"]
atlas = ExtResource("1_0cvru")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0f4t"]
atlas = ExtResource("1_0cvru")
region = Rect2(1152, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdtvd"]
atlas = ExtResource("1_0cvru")
region = Rect2(1248, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7xb6"]
atlas = ExtResource("1_0cvru")
region = Rect2(1344, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqa5n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl8mx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqa5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5itnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ki2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srfv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0f4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdtvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7xb6")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5itnu"]
size = Vector2(22, 3)

[node name="Laser" type="Area2D"]
collision_layer = 16
collision_mask = 10
script = ExtResource("1_rl8mx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qqa5n")
animation = &"hit"
frame_progress = 0.39391786

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_5itnu")

[node name="lifetime" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
